Collapsed menu on Andriod has issues

--- a/public/css/theme/bootstrap.purple.css
+++ b/public/css/theme/bootstrap.purple.css
@@ -649,7 +649,10 @@ button.btn.btn-mini,input[type="submit"].btn.btn-mini{*padding-top:1px;*padding-
 .navbar-inner{min-height:40px;padding-left:20px;padding-right:20px;background-color:#7b188a;background-image:-moz-linear-gradient(top, #8c2096, #620b78);background-image:-webkit-gradient(linear, 0 0, 0 100%, from(#8c2096), to(#620b78));background-image:-webkit-linear-gradient(top, #8c2096, #620b78);background-image:-o-linear-gradient(top, #8c2096, #620b78);background-image:linear-gradient(to bottom, #8c2096, #620b78);background-repeat:repeat-x;filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff8c2096', endColorstr='#ff620b78', GradientType=0);border:1px solid #340640;-webkit-border-radius:4px;-moz-border-radius:4px;border-radius:4px;-webkit-box-shadow:0 1px 4px rgba(0,0,0,0.065);-moz-box-shadow:0 1px 4px rgba(0,0,0,0.065);box-shadow:0 1px 4px rgba(0,0,0,0.065);*zoom:1}.navbar-inner:before,.navbar-inner:after{display:table;content:"";line-height:0}
 .navbar-inner:after{clear:both}
 .navbar .container{width:auto}
-.nav-collapse.collapse{height:auto;overflow:visible}
+.nav-collapse {
+    -webkit-transform: none !important;
+    z-index: 1 !important;
+}
 .navbar .brand{float:left;display:block;padding:10px 20px 10px;margin-left:-20px;font-size:20px;font-weight:200;color:#f5f5f5;text-shadow:0 1px 0 #8c2096}.navbar .brand:hover,.navbar .brand:focus{text-decoration:none}
 .navbar-text{margin-bottom:0;line-height:40px;color:#fff}
 .navbar-link{color:#f5f5f5}.navbar-link:hover,.navbar-link:focus{color:#f5b843}
